--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,15 +1,18 @@
 <% @posts.each do |post| %>
   <div class="box">
-      <div class= "card card-default">
-          <div class="card-head">
-            <%= link_to (image_tag post.image, class: 'image'), post_path(post.id)%>
-          </div>
-         <div class="card-body">
-           <%= link_to post.title, post_path(post.id), class:'post-title'%><hr>
-           <p class = 'post-intro'><%= truncate( post.intro, :length => 100, :separator => ' ' )%></p><hr>
-           <%= link_to post.category_name, posts_path(category: post.category.id), id: 'c-btn', class: "btn btn-outline-info btn-#{post.category_name}"%>
+    <div class= "card card-default">
+      <div class="card-head">
+        <%= link_to (image_tag post.image, class: 'image'), post_path(post.id)%>
+      </div>
+      <div class="card-body">
+        <div class="post-title">
+          <%= link_to post.title, post_path(post.id), class: 'post-title-title'%>
+        </div>
+        <div class="post-info">
+          <%= link_to post.category_name, posts_path(category: post.category.id), id: 'c-btn', class: "btn btn-outline-info btn-#{post.category_name}"%>
            <span class = 'post-created-on'>Posted on <%= post.created_at.strftime("%Y-%m-%d") %></span>
-         </div>
-       </div>
+        </div>
+      </div>
+    </div>
    </div>
  <% end %>
