--- a/app/assets/stylesheets/_global.scss
+++ b/app/assets/stylesheets/_global.scss
@@ -10,7 +10,7 @@ $Life:#80F222;
 $Rails:#CC0001;
 $Others: #CDCDCD;
 $theme-color: #00bfb6;
-$border-color :#efefef;
+$border-color: #e4e4e4;
 
 body{
   font-family: Arial, Helvetica, sans-serif;
