--- a/app/assets/stylesheets/_mobile.scss
+++ b/app/assets/stylesheets/_mobile.scss
@@ -1,6 +1,6 @@
 @media (max-width: 776px) {
 /////////////NAV//////////////////////////
-  .navbar, .nav-intro, .intro-body, .snn-links, .search-bar, .link-list, .pre-footer, .related-post-column, .related-posts {  display: none; }
+  .navbar, .nav-intro, .intro-body, .snn-links, .search-bar, .link-list, .pre-footer, .related-post-column, .related-posts, .footer {  display: none; }
 
   .mobile-nav {
     display: block;
