--- a/app/views/posts/_footer.html.erb
+++ b/app/views/posts/_footer.html.erb
@@ -1,12 +1,5 @@
-<div class="pre-footer">
-  <h4>Do you wanna know more about me?</h4>
-  <div class = 'snn-links'>
-    <a href = 'https://github.com/K-Sato1995'><%= fa_icon "github",  class: "fa-3x" %></a>
-    <a href = 'https://dev.to/ksato1995'><%= fa_icon "rocket", class: "fa-3x" %></a>
-    <a href = 'https://qiita.com/k-penguin-sato'><%= fa_icon "book", class: "fa-3x" %></a>
-  </div>
-</div>
-<div class = 'footer-container'>
+<div class = 'footer'>
+  <div class = 'footer-container'>
     <div class = 'row'>
       <div class="col-md-5 blog-description">
         <h5><a href = 'https://github.com/K-Sato1995/MyBlog'>K-Sato's Blog</a></h5>
@@ -15,7 +8,12 @@
       </div>
       <div class="col-md-5 user-description">
         <h5><a href = 'https://github.com/K-Sato1995'>K-Sato</a></h5>
-        <p>A silly boy aspiring to be a competent programmer.</p>
+        <p>I'm just a silly boy aspiring to be a competent programmer.</p>
+        <div class = 'snn-links'>
+          <a href = 'https://github.com/K-Sato1995'><%= fa_icon "github",  class: "fa-3x" %></a>
+          <a href = 'https://dev.to/ksato1995'><%= fa_icon "rocket", class: "fa-3x" %></a>
+          <a href = 'https://qiita.com/k-penguin-sato'><%= fa_icon "book", class: "fa-3x" %></a>
+        </div>
       </div>
       <div class="col-md-2 links">
         <h5>Links</h5>
@@ -26,6 +24,7 @@
         </ul>
       </div>
     </div>
+  </div>
 </div>
 <footer>
     <p class = 'author-stamp'>Designed and coded by <a href = 'https://github.com/K-Sato1995'>K-Sato</a></p>
