--- a/app/assets/stylesheets/_footer.scss
+++ b/app/assets/stylesheets/_footer.scss
@@ -2,6 +2,7 @@
 .footer {
   border-top: solid 1px $border-color;
   .footer-container {
+    max-width: 1050px;
     position: relative;
     height: 200px;
     background-color: #fff;
