--- a/app/assets/stylesheets/_show.scss
+++ b/app/assets/stylesheets/_show.scss
@@ -2,6 +2,7 @@
   padding: 15px 50px 0 50px;
   margin: 0 auto;
   margin-top: 60px;
+  max-width: 1100px;
   .show-image {
     max-height: 500px;
     width: 100%;
