--- a/app/assets/stylesheets/about.scss
+++ b/app/assets/stylesheets/about.scss
@@ -9,8 +9,11 @@
     margin-bottom: 50px;
     letter-spacing: 1px;
     color: #676262;
-    h2 {
+    h3 {
       margin-bottom: 20px;
+    }
+    p {
+      font-size: 15px;
     }
   }
 }
