--- a/app/assets/stylesheets/_show.scss
+++ b/app/assets/stylesheets/_show.scss
@@ -1,10 +1,10 @@
 .show-container {
   padding: 15px 50px 0 50px;
   margin: 0 auto;
-  margin-top: 60px;
+  margin-top: 50px;
   max-width: 1100px;
   .show-image {
-    max-height: 500px;
+    max-height: 300px;
     width: 100%;
   }
   .show-post-title {
@@ -17,6 +17,7 @@
     font-weight: lighter;
     margin-left: 15px;
     letter-spacing: 1px;
+    font-size: 14px;
   }
   .article-container {
     position: relative;
