--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -9,7 +9,7 @@
           <%= link_to post.title, post_path(post.id), class: 'post-title-title'%>
         </div>
         <div class="post-info">
-          <%= link_to post.category_name, posts_path(category: post.category.id), id: 'c-btn', class: "btn btn-outline-info btn-#{post.category_name}"%>
+          <%= link_to post.category_name, posts_path(category: post.category.id), class:"category-#{post.category_name}"%>
            <span class = 'post-created-on'>Posted on <%= post.created_at.strftime("%Y-%m-%d") %></span>
         </div>
       </div>
