--- a/app/views/posts/_mobile_nav.html.erb
+++ b/app/views/posts/_mobile_nav.html.erb
@@ -7,10 +7,10 @@
   </div>
   <div class="mobile-dropdown" id = "mobile-dropdown">
     <ul class = 'mobile-dropdown-list'>
-      <li class = 'mobile-dropdown-item' onClick = 'openHomeSideBar()'>Category</li>
-      <li class = 'mobile-dropdown-item' onClick = 'openHomeSideBar2()'>Recent Posts</li>
-      <li class = 'mobile-dropdown-item'><%= link_to 'Archive', archives_path%></li>
-      <li class = 'mobile-dropdown-item'><%= link_to 'About', about_path%></li>
+      <li class = 'mobile-dropdown-item' onClick = 'openHomeSideBar()'><%= t(".category") %></li>
+      <li class = 'mobile-dropdown-item' onClick = 'openHomeSideBar2()'><%= t(".recent_posts") %></li>
+      <li class = 'mobile-dropdown-item'><%= link_to t('.archive'), archives_path%></li>
+      <li class = 'mobile-dropdown-item'><%= link_to t('.about'), about_path%></li>
     </ul>
   </div>
 </div>
