--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -10,7 +10,7 @@
         </div>
         <div class="post-info">
           <%= link_to post.category_name, posts_path(category: post.category.id), class:"category-#{post.category_name}"%>
-           <span class = 'post-created-on'>Posted on <%= post.created_at.strftime("%Y-%m-%d") %></span>
+           <span class = 'post-created-on'><%= t(".posted_on")%> <%= post.created_at.strftime("%Y-%m-%d") %></span>
         </div>
       </div>
     </div>
