--- a/app/views/posts/_nav.html.erb
+++ b/app/views/posts/_nav.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar fixed-top">
   <div class="nav-container">
-    <a href = '/'><%= image_tag 'logo.png', class: 'logo'%></a>
-    <h4><%= link_to "Blog", root_path, class:'navbrand' %></h4>
+    <%= link_to image_tag('logo.png', class: 'logo'), root_path%>
+    <h4><%= link_to t( ".title" ), root_path, class:'navbrand' %></h4>
     <ul class = 'nav-list' id = 'nav-list'>
       <li class = 'nav-item' onClick = 'openHomeSideBar()'><%= t(".category")%></li>
       <li class = 'nav-item' onClick = 'openHomeSideBar2()'><%= t(".recent_posts")%></li>
@@ -10,7 +10,7 @@
     <%= fa_icon "search",  class: "fa-2x", id: "search-icon" , onClick: 'openSearchBar()'%>
     <div class="search-box" id = 'search-box'>
       <%= form_tag(posts_path, method: :get) do %>
-        <%= text_field_tag :title, params[:title],class:'search-bar', placeholder:'Type Here...' %>
+        <%= text_field_tag :title, params[:title],class:'search-bar', placeholder: t(".placeholder") %>
           <span id='close-icon' onClick = 'closeSearchBar()'>x</span>
       <% end %>
     </div>
