Add total page views to each post

--- a/app/assets/stylesheets/_show.scss
+++ b/app/assets/stylesheets/_show.scss
@@ -31,6 +31,14 @@
   .post-context {
     padding-bottom: 20px;
   }
+  .total_page_view {
+    margin-top: -15px;
+    color: #A9A9A9;
+    font-weight: lighter;
+    letter-spacing: 1px;
+    font-size: 14px;
+    float: right
+  }
 }
 
 /////////////////////////Related Posts//////////////////////////////
