--- a/app/assets/stylesheets/_post-index.scss
+++ b/app/assets/stylesheets/_post-index.scss
@@ -37,6 +37,8 @@
     .card-head{
       .image{
           border-bottom: solid 1px $border-color;
+          border-top-right-radius: 4px;
+          border-top-left-radius: 4px;
           max-width: 330px;
           width: 100%;
           height: 170px;
