--- a/app/views/admin/posts/_form.html.erb
+++ b/app/views/admin/posts/_form.html.erb
@@ -31,9 +31,15 @@
 
 <div class="form-group">
   <div class="row">
+    <%= f.text_area :introduction, placeholder:'Introduction', class: "col-md-12 form-control", cols: "5", rows: "5"%>
+  </div>
+</div>
+
+<div class="form-group">
+  <div class="row">
     <%= f.text_area :context ,
-        cols: "30",
-        rows: "30",
+        cols: "50",
+        rows: "50",
         id: 'context',
         class:"col-md-12 form-control",
         value: @post.context ||= initial_value
