--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -35,13 +35,13 @@
           <div class="card-body">
             <ul class="nav nav-tabs" >
               <li class="nav-item">
-                <%= link_to 'Published', admin_posts_path(status: 'published'), class: "nav-link #{@active3} published" %>
+                <%= link_to 'Published', admin_posts_path(status: 'published'), class: "nav-link #{@published} published" %>
               </li>
               <li class="nav-item" >
-                  <%= link_to 'Draft', admin_posts_path(status: 'draft'), class: "nav-link #{@active1} draft" %>
+                  <%= link_to 'Draft', admin_posts_path(status: 'draft'), class: "nav-link #{@draft} draft" %>
               </li>
               <li class="nav-item">
-                  <%= link_to 'Private', admin_posts_path(status: 'confidential'), class: "nav-link #{@active2} private"%>
+                  <%= link_to 'Private', admin_posts_path(status: 'confidential'), class: "nav-link #{@confidential} private"%>
               </li>
             </ul>
             <!-- Table for Publised Posts-->
