--- a/app/views/admin/posts/_form.html.erb
+++ b/app/views/admin/posts/_form.html.erb
@@ -55,7 +55,13 @@
 
 <div class="form-group">
   <div class="row">
-    <%= f.select(:status, Post.statuses.keys, {}, { :class => "col-md-12 form-control" }) %>
+    <%= f.select(:status, Post.statuses.keys.map {|key| [key.capitalize, key]}, {}, { :class => "col-md-12 form-control" }) %>
+  </div>
+</div>
+
+<div class="form-group">
+  <div class="row">
+    <%= f.select(:language, Post.languages.keys.map {|key| [key.capitalize, key]},{},  { :class => "col-md-12 form-control" } ) %>
   </div>
 </div>
 
