Make it an API Application

--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -11,7 +11,7 @@
       <!-- Sidebar-list -->
       <ul class="sidebar-nav">
         <li class = 'nav-item'><%= link_to 'Admin Home', admin_posts_path %></li>
-        <li><%= link_to 'Blog Home', root_path %></li>
+        <li><%= link_to 'Blog Home', 'https://k-sato1995.github.io/MyBlogFront/' %></li>
       </ul>
     </div>
     <div class = 'row'>
@@ -60,7 +60,7 @@
                 <% @posts.each do |post| %>
                 <tr>
                   <td><%= post.id %></td>
-                  <td><%= link_to post.title, post_path(post) %></td>
+                  <td><%= link_to post.title,"https://k-sato1995.github.io/MyBlogFront/#{post.id}", :target => "_blank" %></td>
                   <td><%= post.category_name %></td>
                   <td><%= post.created_at.strftime("%Y/%m/%d") %></td>
                   <td><%= post.updated_at.strftime("%Y/%m/%d") %></td>
