--- a/app/assets/stylesheets/_admin.scss
+++ b/app/assets/stylesheets/_admin.scss
@@ -1,5 +1,4 @@
 @import "global";
-@import "navbar";
 
 #admin-sidebar {
   z-index: 1;
@@ -8,7 +7,7 @@
   height: 100%;
   left: 0;
   top: 0;
-  overflow:hidden;
+  overflow: hidden;
   background-color: #212529;
   border-right: solid 1px #efefef;
   -webkit-transition: all 0.5s ease;
@@ -26,9 +25,9 @@
     margin-top: 30px;
     .card-header {
       background-color: #fff;
-       h5 {
+      h5 {
         margin: 0;
-       }
+      }
     }
     .card-body {
       padding: 30px;
@@ -36,7 +35,7 @@
         margin-bottom: -10px;
       }
       .posts-table {
-        border: solid  1px #DEE2E6;
+        border: solid 1px #dee2e6;
         border-top: none;
         background-color: #fff;
       }
@@ -55,41 +54,41 @@
 //Navbar
 .admin-navbar {
   top: 0;
-  height:  60px;
+  height: 60px;
   width: 100%;
   border-bottom: solid 1px #efefef;
   background-color: #fff;
-   .admin-navbar-brand {
-     margin: 15px;
-     margin-top: 22px;
-     color: $h-color;
-     float: left;
-   }
-   .admin-navbar-brand:hover{
-     text-decoration: none;
-   }
-   #menu-icon {
-     position: absolute;
-     cursor: pointer;
-     top: 26px;
-     left: 160px;
-     .menu-icon-bar {
-       width: 25px;
-       height: 3px;
-       background-color: $h-color;
-       margin: 3px 0;
-       border-radius: 5px;
-     }
-   }
-   .admin-btn-list {
-     position: absolute;
-     top: 5px;
-     right: 30px;
-     li {
-       display: inline-block;
-       margin:10px;
-     }
-   }
+  .admin-navbar-brand {
+    margin: 15px;
+    margin-top: 22px;
+    color: $h-color;
+    float: left;
+  }
+  .admin-navbar-brand:hover {
+    text-decoration: none;
+  }
+  #menu-icon {
+    position: absolute;
+    cursor: pointer;
+    top: 26px;
+    left: 160px;
+    .menu-icon-bar {
+      width: 25px;
+      height: 3px;
+      background-color: $h-color;
+      margin: 3px 0;
+      border-radius: 5px;
+    }
+  }
+  .admin-btn-list {
+    position: absolute;
+    top: 5px;
+    right: 30px;
+    li {
+      display: inline-block;
+      margin: 10px;
+    }
+  }
 }
 
 //Sidebar
@@ -119,7 +118,8 @@
   background: rgba(255, 255, 255, 0.2);
 }
 
-.sidebar-nav li a:active, .sidebar-nav li a:focus {
+.sidebar-nav li a:active,
+.sidebar-nav li a:focus {
   text-decoration: none;
 }
 
@@ -136,4 +136,16 @@
 .sidebar-nav > .sidebar-brand a:hover {
   color: #fff;
   background: none;
+}
+.admin-btn {
+  position: absolute;
+}
+
+.admin-footer {
+  margin-top: 70px;
+  background-color: #fff;
+  border-top: solid 1px $border-color;
+  width: 100%;
+  height: 50px;
+  bottom: 0;
 }
