Add categories interface

--- a/app/assets/stylesheets/_admin.scss
+++ b/app/assets/stylesheets/_admin.scss
@@ -39,6 +39,10 @@
         border-top: none;
         background-color: #fff;
       }
+      .g_table {
+        border: solid 1px #dee2e6;
+        background-color: #fff;
+      }
     }
   }
   .chart-list {
