--- a/app/views/admin/tags/index.html.erb
+++ b/app/views/admin/tags/index.html.erb
@@ -10,7 +10,7 @@
       <!-- Content -->
       <div class="col-md-11 admin-content" id = 'admin-content'>
         <div class="card admin-card">
-          <div class="card-header"><h5>Categories Table</h5></div>
+          <div class="card-header"><h5>Tags Table</h5></div>
           <div class="card-body">
             <!-- Table-->
             <table class="table table-striped table-hover g_table">
@@ -24,15 +24,15 @@
                 </tr>
               </thead>
               <tbody>
-                <% @categories.each do |category| %>
+                <% @tags.each do |tag| %>
                 <tr>
-                  <td><%= category.id %></td>
-                  <td><%= category.name %></td>
-                  <td><%= category.created_at.strftime("%Y/%m/%d") %></td>
-                  <td><%= category.updated_at.strftime("%Y/%m/%d") %></td>
+                  <td><%= tag.id %></td>
+                  <td><%= tag.name %></td>
+                  <td><%= tag.created_at.strftime("%Y/%m/%d") %></td>
+                  <td><%= tag.updated_at.strftime("%Y/%m/%d") %></td>
                   <td>
-                    <%= link_to 'Edit', edit_admin_category_path(category) %>
-                    <%= link_to 'Delete',admin_category_path(category), method: :delete, data: { confirm: 'Are you sure?' } %>
+                    <%= link_to 'Edit', edit_admin_tag_path(tag) %>
+                    <%= link_to 'Delete',admin_tag_path(tag), method: :delete, data: { confirm: 'Are you sure?' } %>
                   </td>
                 </tr>
                 <% end %>
