--- a/app/views/shared/_side_nav.html.erb
+++ b/app/views/shared/_side_nav.html.erb
@@ -2,8 +2,8 @@
   <!-- Sidebar-list -->
   <ul class="sidebar-nav">
     <li class = 'nav-item'><%= link_to 'Admin Home', admin_posts_path %></li>
-    <li><%= link_to 'Blog Home', 'https://k-sato1995.github.io/MyBlogFront/' %></li>
     <li><%= link_to 'Category List', admin_categories_path %></li>
     <li><%= link_to 'Tag List', admin_tags_path %></li>
+    <li><%= link_to 'Comments List', admin_comments_path %></li>
   </ul>
 </div>
